fixed some spacing

--- a/app/styles/granite/page/visited-first-steps.less
+++ b/app/styles/granite/page/visited-first-steps.less
@@ -6,62 +6,55 @@
   font-weight: bold;
 }
 
-.first-steps .segment >h3 {
-
+.first-steps .segment > h3 {
   font-size: 2.5em;
 }
 
-.first-steps .segment > .spacing+.label>p {
-  // styles that affect the container
+.first-steps .segment > .spacing + .label > p{
   font-size: 1.2em;
 }
 
-.first-steps .segment >p {
-  // styles that affect the container
+.first-steps .segment > p {
   font-size: 1.2em;
   margin-bottom:60px;
 }
 
 .first-steps .column {
-  // styles that affect the container
   margin: .8em;
-margin-top: 6em;
+  margin-top: 6em;
 }
 
 .first-steps .column > .segment {
-  // styles that affect the container
-  margin: .8em;
-margin-top: 6em;
+    margin: .8em;
+    margin-top: 6em;
 }
 
-.first-steps .segment >.spacing+.label>.icon>p{
-font-size: 1.6em;
+.first-steps .segment > .spacing + .label > .icon > p{
+  font-size: 1.6em;
 }
-
 
 .first-steps .grid {
-padding: 10px;
+  padding: 10px;
 }
 
 //----AFTER COMPLETED----//
-.first-steps .segment >.done__icon>i{
+.first-steps .segment > .done__icon > i{
   color: @gray-lighter;
   position: absolute;
   display: block;
-margin-left: 0.7em;
-margin-top: 0.4em;
+  margin-left: 0.7em;
+  margin-top: 0.4em;
 }
 
-#overlay{
+.first-steps .segment > .overlay{
   position: absolute;
-   display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(102,217,100,0.8);
-    z-index: 2;
-    cursor: pointer;
-  }
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(102,217,100,0.8);
+  z-index: 2;
+}
